// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with largeViewport 1`] = `
<Headroom
  pinStart={0}
  scrollHeight={85}
>
  <header
    className="header"
  >
    <div
      className="logoWide"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <HeaderActionBar
      className="actionBar"
      items={
        Array [
          HeaderActionItem {
            "_dropDownNode": undefined,
            "_href": "/action1",
            "_iconSrc": undefined,
          },
        ]
      }
    />
    <HeaderMenuBar
      className="navigationBar"
      items={
        Array [
          HeaderNavigationItem {
            "_active": undefined,
            "_href": "/nav1",
            "_text": undefined,
          },
        ]
      }
    />
  </header>
</Headroom>
`;

exports[`Header should match snapshot with smallViewport 1`] = `
<Headroom
  pinStart={0}
  scrollHeight={55}
>
  <header
    className="header"
  >
    <div
      className="logoWide"
    >
      <img
        src="test-file-stub"
      />
    </div>
    <HeaderActionBar
      className="actionBar"
      items={
        Array [
          HeaderActionItem {
            "_dropDownNode": undefined,
            "_href": "/action1",
            "_iconSrc": undefined,
          },
        ]
      }
    />
    <HeaderMenuBar
      className="navigationBar"
      items={
        Array [
          HeaderNavigationItem {
            "_active": undefined,
            "_href": "/nav1",
            "_text": undefined,
          },
        ]
      }
    />
  </header>
</Headroom>
`;
